--- a/project_technologies.json
+++ b/project_technologies.json
@@ -8,8 +8,8 @@
             "Mongodb",
             "Javascript",
             "Jquery",
-            "AngularJS"
-            "html"
+            "AngularJS",
+            "html",
             "css"
         ]
     }
